Image proc Cameras Model in ROS small checkerboard picture last figure on top

--- a/refs.bib
+++ b/refs.bib
@@ -27,7 +27,13 @@
   howpublished  = {\url{http://www.ros.org/wiki/pr2_calibration}},
 }
 
-
+@Book{HZ2,
+    author = "Hartley, R.~I. and Zisserman, A.",
+    title = "Multiple View Geometry in Computer Vision",
+    edition = "Second",
+    year = "2004",
+    publisher = "Cambridge University Press, ISBN: 0521540518"
+}
 
 @book{matlab,
 year = {2012},
