--- a/tex/header.tex
+++ b/tex/header.tex
@@ -24,6 +24,15 @@ Pablo Speciale\\
 }
 \end{center}
 
+\vspace{1cm}
+\begin{center}
+\normalsize{
+Le2i - Laboratoire Electronique, Informatique et Image, \\
+University of Burgundy}
+\end{center}
+
+
+
 \vspace{4cm}
 \begin{center}
 {\large A Thesis Submitted for the Degree of \\MSc Erasmus Mundus
