--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -12,6 +12,7 @@ Why re-implement the robot\_state\_publisher?
 
 (optional)
 Why KDL?
+
 Why Ceres?
 
 
@@ -21,7 +22,7 @@ Why Ceres?
 \label{cha:extra}
 
 (this is more than optional)
-Work not related to the thesis, but time consuming, like commits in Ceres, fixed bugs in URDF dom, etc...
+Work not related to the thesis, but time consuming, like commits in Ceres, fixed bugs in URDF dom (export\_urdf() function), etc...
 
 
 
