--- a/thesis.tex
+++ b/thesis.tex
@@ -111,6 +111,10 @@
 
 \usepackage[font=small,labelfont=bf]{caption}
 
+\makeatletter
+\setlength{\@fptop}{0pt}
+\makeatother
+
 
 \begin{document}
 \newpage
