--- a/refs.bib
+++ b/refs.bib
@@ -74,3 +74,16 @@ publisher = {The MathWorks Inc.},
     author = {Vijay Pradeep and Kurt Konolige and Eric Berger}
 }
 
+@InProceedings{BA,
+  author       = "Bill Triggs and P. McLauchlan and Richard Hartley and A. Fitzgibbon",
+  title        = "Bundle Adjustment -- A Modern Synthesis",
+  booktitle    = "Vision Algorithms: Theory and Practice",
+  series       = "Lecture Notes in Computer Science",
+  volume       = "1883",
+  pages        = "298--372",
+  year         = "2000",
+  editor       = "B. Triggs and A. Zisserman and R. Szeliski",
+  publisher    = "Springer-Verlag",
+  keywords     = "MOVI, CUMULI",
+  url          = "http://lear.inrialpes.fr/pubs/2000/TMHF00"
+}
