--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -3,12 +3,14 @@
 
 % \section{Introduction}
 
+TODO:
 calibration is important because blahblah...
 
 
 \section{Goal}
 
-Goals...
+TODO: Goals...
+
 
 
 \section{Thesis organization and methodology}
@@ -24,4 +26,5 @@ Another strong division in this thesis is the use of \textbf{synthetic data} (ch
 
 \section{Related Work}
 
-cites...
+TODO:
+more cites...
