--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -1,3 +1,8 @@
-\chapter{The first appendix}
-If you need to add any appendix, do it here...
- Etc.
+\chapter{Theorem demonstrations}
+TODO... the theorem demonstration here...
+
+
+\chapter{Code?}
+TODO:...
+At least the Ceres cost function... (or maybe I can put it in Implementation details)
+
